# the-yut

./: .gitignore  build.py
.github/workflows/: deploy.yml
docs/: 01_GDD_GameDesignDocument.md  02_TechnicalArchitecture.md  03_AgentWorkflow.md
the-yut-client/: The Yut.pck  export_presets.cfg  index.pck  project.godot
the-yut-client/assets/: dmg_theme.tres
the-yut-client/assets/fonts/: pixel_font.tres  pixel_font_bold.tres
the-yut-client/assets/shaders/: dot_matrix.gdshader  dot_matrix.gdshader.uid
the-yut-client/export/: custom_shell.html
the-yut-client/scenes/: main.tscn
the-yut-client/scenes/game/: board.tscn  game_screen.tscn  piece.tscn
the-yut-client/scenes/lobby/: waiting_room.tscn
the-yut-client/scenes/result/: game_over.tscn
the-yut-client/scenes/rules/: rules_screen.tscn
the-yut-client/scenes/title/: title_screen.tscn
the-yut-client/scripts/: main.gd  main.gd.uid
the-yut-client/scripts/autoload/: audio_manager.gd  audio_manager.gd.uid  dot_matrix_overlay.gd  dot_matrix_overlay.gd.uid  game_state.gd  game_state.gd.uid  network_manager.gd  network_manager.gd.uid
the-yut-client/scripts/game/: action_stack_hud.gd  action_stack_hud.gd.uid  board_controller.gd  board_controller.gd.uid  game_screen.gd  game_screen.gd.uid  (+10 more)
the-yut-server/: ADMIN_API.md  Cargo.toml  Dockerfile  check.bat  check.sh  fly.toml
the-yut-server/src/: admin.rs  bot.rs  main.rs  messages.rs  player.rs  room.rs  ws_handler.rs
the-yut-server/src/game/: board.rs  mod.rs  piece.rs  state.rs  turn.rs  yut.rs
the-yut-server/static/: ads.txt  index.html  index.pck
(+8 files in other folders)
