[package]
name = "the-yut-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
actix-rt = "2"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
parking_lot = "0.12"
